--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -476,7 +476,7 @@ a {
 }
 
 .slider-wrapper{
-	height: 550px;
+	max-height: 550px;
 	position: relative;
 	@include w480 {
 		height: 225px;
@@ -562,12 +562,76 @@ a {
 		img {
 			height: 100%;
 			width: 100%;
+			z-index: 1;
 			margin: 0 auto;
 			@include w480 {
 				position: absolute;
 				top: 50%;
 				left: 50%;
 				transform: translate(-50%,-50%);
+			}
+		}
+		&-text-section {
+			position: absolute;
+			color: #FFF;
+			height: 100%;
+			padding: 40px;
+			display: flex;
+			flex-direction: column;
+			&_bottom {
+				flex-direction: column-reverse;
+			}
+			&_center {
+				width: 100%;
+				height: 100%;
+				align-items: center;
+				justify-content: center;
+				.first-slider-item-head {
+					margin-bottom: 20px;
+				}
+			}
+			&_full-height {
+				max-width: 400px;
+				text-align: center;
+				align-items: center;
+				justify-content: space-around;
+			}
+		}
+		&-head {
+			font-size: 54px;
+			font-family: 'Proxima Nova Bold';
+			&_back {
+				background: rgba(255,102,0,0.4);
+				display: flex;
+				margin-bottom: 20px;
+				padding: 0 20px;
+				&:first-child {
+					margin-bottom: 0px;
+				}
+			}
+		}
+		&-text {
+			font-size: 38px;
+			&_ff {
+				font-family: 'Proxima Nova Light', sans-serif;
+				letter-spacing: -2px;
+			}
+		}
+		.first-slider &-btn {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 187px;
+			height: 37px;
+			color: #FFF;
+			font-size: 18px;
+			border-radius: 4px;
+			border: 1px solid #FFF;
+			outline: none;
+			background: none;
+			&_full {
+				background: $red;
+				border: 1px solid $red;
 			}
 		}
 	}
@@ -716,7 +780,7 @@ a {
 	outline: none;
 	margin-right: 20px;
 	@include w1366 {
-		width: 300px;
+		width: 302px;
 	}
 	&:last-child {
 		margin-right: 0px;
@@ -731,6 +795,7 @@ a {
 			position: relative;
 		}
 		&__img {
+			cursor: pointer;
 			img {
 				width: 100%;
 				height: 180px;
@@ -1013,6 +1078,7 @@ a {
 			flex-direction: column;
 			justify-content: flex-end;
 			padding: 20px;
+			transition: 0.1s ease-in-out;
 			@include w480 {
 				height: 150px;
 				margin-bottom: 20px;
@@ -1067,20 +1133,32 @@ a {
 			}
 			&:nth-child(1) {
 				background: url(../img/collection-1.png) no-repeat center center;
-				background-size: cover;
+				background-size: 113%;
+				&:hover {
+					background-size: 120%;
+				}
 			}
 			&:nth-child(2) {
 				background: url(../img/collection-2.png) no-repeat center center;
-				background-size: cover;
+				background-size: 103%;
+				&:hover {
+					background-size: 110%;
+				}
 				margin: 0 0 10px 0;
 			}
 			&:nth-child(3) {
 				background: url(../img/collection-3.png) no-repeat center center;
-				background-size: cover;
+				background-size: 101%;
+				&:hover {
+					background-size: 108%;
+				}
 			}
 			&:nth-child(4) {
 				background: url(../img/collection-4.png) no-repeat center center;
-				background-size: cover;
+				background-size: 121%;
+				&:hover {
+					background-size: 128%;
+				}
 			}
 			&_img {
 				&:nth-child(1) {
@@ -1095,6 +1173,9 @@ a {
 				&:nth-child(4) {
 					background: url(../img/collection2-4.png);
 				}
+			}
+			&:hover {
+
 			}
 		}
 	}
@@ -1114,7 +1195,6 @@ a {
 		font-size: 18px;
 		position: relative;
 		overflow: hidden;
-		transition: 0.5s ease-in-out;
 		@include w480 {
 			line-height: 26px;
 			font-size: 14px;
@@ -3739,6 +3819,250 @@ a {
 }
 
 
+.designers {
+	padding-top: 0px;
+	&-personal {
+		display: flex;
+		align-items: stretch;
+		&-img {
+			width: 134px;
+			height: 134px;
+			border-radius: 50%;
+			overflow: hidden;
+			position: relative;
+			flex: 0 1 134px;
+			margin-right: 20px;
+			img {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%,-50%);
+			}
+		}
+		&-name {
+			display: flex;
+			flex-direction: column;
+			margin-right: 140px;
+			&__name {
+				font-family: 'Proxima Nova Semibold', sans-serif;
+				font-size: 36px;
+			}
+			&__job {
+				white-space: nowrap;
+				margin-top: auto;
+			}
+		}
+		&-contacts {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			margin-right: 70px;
+			&__head {
+				font-size: 24px;
+			}
+			&__phone {
+				font-size: 18px;
+				font-family: 'Proxima Nova Light', sans-serif;
+				a {
+					color: #000;
+				}
+			}
+			&__link {
+				a {
+					color: #75A4FF;
+					font-style: italic;
+					font-size: 18px;
+					text-decoration-line: underline;
+				}
+			}
+		}
+		&-about {
+			flex: 0 1 440px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			&__head {
+				font-size: 24px;
+			}
+		}
+	}
+	&-project-block {
+		border-bottom: 1px solid #EAEAEA;
+		border-top: 1px solid #EAEAEA;
+		&_nb {
+			border: none;
+		}
+	}
+	&-head {
+		font-family: 'Proxima Nova';
+		line-height: normal;
+		font-size: 36px;
+	}
+	&-projects {
+		&-head {
+			font-family: 'Proxima Nova';
+			line-height: normal;
+			font-size: 24px;
+			margin-bottom: 20px;
+		}
+		&-gallery {
+			&-wrapper {
+				margin-bottom: 25px;
+				position: relative;
+				padding-left: 30px;
+				padding-right: 30px;
+			}
+			&-item {
+				border-radius: 4px;
+				overflow: hidden;
+				width: 300px;
+				height: 236px;
+				outline: none;
+			}
+			&-arrow__prev {
+				position: absolute;
+				top: 50%;
+				left: 0;
+				transform: translateY(-50%);
+				opacity: 0.2;
+				transition: 0.3s;
+				cursor: pointer;
+				&:hover {
+					opacity: 1;
+				}
+			}
+			&-arrow__next {
+				position: absolute;
+				top: 50%;
+				right: 0;
+				transform: translateY(-50%);
+				opacity: 0.2;
+				transition: 0.3s;
+				cursor: pointer;
+				&:hover {
+					opacity: 1;
+				}
+			}
+		}
+		&-description {
+			font-family: Proxima Nova;
+			line-height: 33px;
+			font-size: 18px;
+			margin-bottom: 25px;
+		}
+		&-btn {
+			margin-right: 20px;
+			text-transform: uppercase;
+			width: 183px;
+			height: 37px;
+			&-wrapper {
+				display: flex;
+				align-items: center;
+			}
+		}
+	}
+}
+
+.ptb25 {
+	padding-top: 25px;
+	padding-bottom: 25px;
+}
+
+.nowrap {
+	white-space: nowrap;
+}
+
+
+.fancybox-content {
+	max-width: 940px;
+	padding: 0px;
+	font-family: 'Proxima Nova', sans-serif;
+	overflow: visible;
+	.tabs-container-list-item-innercontainer-side-video {
+		width: 100%;
+		video {
+			max-width: 100%;
+		}
+	}
+	.fancybox-row {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+	}
+	.block {
+		padding: 40px 0px 40px 40px;
+	}
+	.fancybox-btn {
+		font-size: 14px;
+		letter-spacing: 1px;
+		color: #757575;
+		width: 245px;
+		height: 40px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border-radius: 4px;
+		border: 1px solid #757575;
+		text-transform: uppercase;
+	}
+	.card-main-block-description-row-item {
+		margin-right: 0px;
+	}
+	.card-main-block-description-row-btn-wrapper-like {
+		height: 40px;
+		width: 40px;
+	}
+	.card-main-block-description-row-btn-wrapper-buy {
+		height: 40px;
+		width: 130px;
+	}
+	.card-main-block-description-row-btn-wrapper {
+		flex: 1;
+	}
+	.card-main-block-description-row-item_info {
+		white-space: nowrap;
+	}
+	.row-yellow {
+		background: #FDFFB0;
+		padding: 20px;
+		.card-main-block-description-row {
+			padding: 0px;
+			&:first-child {
+				padding-bottom: 20px;
+			}
+		}
+	}
+	.card-main-block-description-name-wrapper {
+		padding: 0 0 20px 20px;
+		.card-main-block-description-head {
+			font-size: 18px;
+			&:nth-child(2) {
+				font-size: 36px;
+			}
+		}
+	}
+	.fancybox-button.fancybox-close-small {
+	    width: 40px;
+   		height: 40px;
+		padding: 0px;
+		opacity: 1;
+		top: -10px;
+		right: -50px;
+		svg {
+			width: 100%;
+			height: 100%;
+			path {
+				fill: #FFF;				
+			}
+		}
+	}
+}
+
+.jc-sb {
+	justify-content: space-between;
+	padding-right: 20px;
+}
 
 
 
