added some fonts

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6,59 +6,79 @@
   font-family: "Roboto Bold";
   src: url(../fonts/Roboto-Bold.ttf);
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+}
 
 @font-face {
   font-family: "Gotham Pro";
   src: url(../fonts/GothamProRegular.ttf);
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+}
 
 @font-face {
   font-family: "Roboto Light";
   src: url(../fonts/Roboto-Light.ttf);
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+}
 
 @font-face {
   font-family: "Gotham Bold";
   src: url(../fonts/GothamProBold.ttf);
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+}
 
 @font-face {
   font-family: "Proxima Nova";
-  src: url(../fonts/ProximaNova.ttf);
+  src: url(../fonts/freeset-cyrillic_[allfont.ru].ttf);
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+}
 
 @font-face {
   font-family: "Proxima Nova Bold";
-  src: url(../fonts/ProximaNovaBold.ttf);
+  src: url(../fonts/freeset-bold-cyrillic_[allfont.ru].ttf);
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+}
 
 @font-face {
   font-family: "Proxima Nova Light";
-  src: url(../fonts/ProximaNovaLight.ttf);
+  src: url(../fonts/freeset-cyrillic_[allfont.ru].ttf);
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+}
 
 @font-face {
   font-family: "Proxima Nova Semibold";
-  src: url(../fonts/ProximaNovaSemibold.ttf);
+  src: url(../fonts/freeset-bold-cyrillic_[allfont.ru].ttf);
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+}
 
 @font-face {
   font-family: "Poppins";
   src: url(../fonts/Poppins-regular.ttf);
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+}
 
 @font-face {
   font-family: "Proxima Nova Extrabold";
-  src: url(../fonts/ProximaNovaExtrabld.ttf); }
+  src: url(../fonts/ProximaNovaExtrabld.ttf);
+}
+
+@font-face {
+  font-family: "test1";
+  src: url(../fonts/freeset-cyrillic_[allfont.ru].ttf);
+}
+
+@font-face {
+  font-family: "test2";
+  src: url(../fonts/freeset-bold-cyrillic_[allfont.ru].ttf);
+}
 
 * {
   padding: 0;
